--- a/_posts/2026-01-03-Java_Ch9.md
+++ b/_posts/2026-01-03-Java_Ch9.md
@@ -384,3 +384,250 @@ Ashley
 Helen 
 가장 긴 이름은 >>> Ashley
 ```
+
+
+
+
+
+
+## 6. 제네릭 컬렉션 활용 - `Iterator<E>`
+
+
+Vector, ArrayList, LinkedList, Set 컬렉션에서<br>
+순차적으로 요소를 검색할 때,<br> 
+`Iterator<E>` 인터페이스를 사용하면 편리하다.<br>
+`Iterator<E>`를 사용할 때는 `<E>`에<br>
+컬렉션의 제네릭 타입과 동일한 타입을 설정해야 한다.<br>
+
+
+다음은 Iterator의 주요 메소드들이다.<br>
+
+
+![Iterator 메소드](/assets/images/Iterator%20메소드.png)<br>
+
+
+다음은 Iterator 객체 생성과 활용 예시이다.<br>
+
+
+```java
+public class IteratorEx {
+	public static void main(String[] args) {
+		// 정수값만 다루는 벡터 객체 생성
+		Vector<Integer> v = new Vector<Integer>();
+
+		v.add(7);
+		v.add(3);
+		v.add(-1);
+		v.add(2, 101);
+
+		// Iterator 를 이용한 모든 정수 출력하기
+		Iterator<Integer> it = v.iterator(); // Iterator 객체 가져오기
+
+		while (it.hasNext()) {
+			int n = it.next();
+			System.out.println(n);
+		}
+
+		// Iterator 를 이용하여 모든 정수 더하기
+		int sum = 0;
+		it = v.iterator(); // Iterator 객체 가져오기
+
+		while (it.hasNext()) {
+			int n = it.next();
+			sum += n;
+		}
+		System.out.println("벡터의 모든 정수의 합>>> " + sum);
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+```java
+7
+3
+101
+-1
+벡터의 모든 정수의 합>>> 110
+```
+
+
+여기서 주의할 점은<br>
+위 코드에서 이미 한 번 생성하여 사용된 Iterator는<br>
+이미 벡터의 끝까지 순회하였기 때문에 다음 요소가 없다.<br>
+Iterator는 한 방향으로만 순회 가능한 일회성 객체이기 때문에<br>
+사용할 때마다 새로운 Iterator를 받아와야 한다.<br>
+
+
+또한, Iterator는 이전 위치로 되돌아가거나<br>
+처음부터 다시 순회하는 기능을 제공하지 않는다.<br>
+
+
+
+
+
+
+## 7. 제네릭 컬렉션 활용 - `HashMap<K, V>`
+
+
+`HashMap<K, V>` 컬렉션은 '키(key)'와 '값(value)'의<br>
+쌍으로 구성되는 요소를 다룬다.<br>
+`K`는 '키'로 사용될 데이터 타입을,<br>
+`V`는 '값'으로 사용될 데이터 타입을 나타내는 타입 매개 변수이다.<br>
+
+
+해시맵(HashMap)은 내부에 '키'와 '값'을 저장하는 자료구조를 가지고,<br>
+put()과 get() 메소드를 이용하여 요소를 삽입하거나 검색한다.<br>
+
+
+put(key, value)은 key를 기반으로 해시 함수(hash function)를 실행하여<br>
+해시맵 내의 저장 위치를 결정하고, 해당 위치에 key와 value를 저장한다.<br>
+
+get(key)는 key를 기반으로 동일한 해시 함수를 실행하여<br>
+value가 저장된 위치를 알아내어 리턴한다.<br> 
+
+
+해시맵은 해시 함수를 통해 '키'와 '값'이 저장되는<br>
+위치를 결정하므로, 사용자는 그 위치를 알 수 없다.<br>
+또한 삽입되는 순서와 들어 있는 위치는 관계가 없다.<br>
+그러므로 해시맵은 요소의 위치나 순서가 중요하지 않은<br>
+상황에서 사용된다.<br>
+
+
+다음은 해시맵의 주요 메소드들이다.<br>
+
+
+![HashMap 메소드](/assets/images/HashMap%20메소드.png)<br>
+
+
+다음은 해시맵 생성과 활용 예시이다.<br>
+
+
+```java
+public class HashMapEx {
+	public static void main(String[] args) {
+		// 영어 단어와 한글 단어의 쌍을 저장하는 HashMap 컬렉션 생성
+		HashMap<String, String> animal = new HashMap<String, String>();
+
+		// 3개의 (key, value) 쌍을 animal 에 저장
+		animal.put("tiger", "호랑이");
+		animal.put("lion", "사자");
+		animal.put("wolf", "늑대");
+
+		// animal 해시맵에 들어있는 모든 (key, value) 쌍 출력
+		Set<String> keys = animal.keySet(); // 모든 키를 Set 컬렉션에 받아옴
+		Iterator<String> it = keys.iterator(); // Set 을 순회할 Iterator 받아옴
+
+		while (it.hasNext()) {
+			String key = it.next(); // 키(key)
+			String value = animal.get(key); // 값(value)
+
+			System.out.println("(" + key + "," + value + ")");
+		}
+
+		// 사용자로부터 영어 단어를 입력 받고 한글 단어 검색
+		Scanner sc = new Scanner(System.in);
+
+		for (int i = 0; i < 3; i++) {
+			System.out.print("찾고 싶은 동물(영어 입력)>>>");
+
+			String eng = sc.next();
+
+			// 해시맵에서 '키' eng 의 '값' kor 검색
+			String kor = animal.get(eng); // eng 가 해시맵에 없으면 null 리턴
+
+			if (kor == null) {
+				System.out.println(eng + "는 없는 동물 이름입니다.");
+			} else {
+				System.out.println(kor);
+			}
+		}
+		sc.close();
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+```java
+(wolf,늑대)
+(tiger,호랑이)
+(lion,사자)
+찾고 싶은 동물(영어 입력)>>>wolf
+늑대
+찾고 싶은 동물(영어 입력)>>>tiger
+호랑이
+찾고 싶은 동물(영어 입력)>>>lion
+사자
+```
+
+
+
+
+
+## 8. 제네릭 컬렉션 활용 - 나의 제네릭 클래스 만들기
+
+
+이번엔 나만의 제네릭 클래스를 만들어 보자.<br>
+제네릭 클래스의 선언 방법은 기존 클래스 선언 방법과 유사하다.<br>
+차이점은 클래스 이름 다음에 타입 매개변수(Type Parameter)를<br>
+`<`와 `>` 사이에 선언한다는 점이다.<br>
+
+
+```java
+class MyClass<T> { // 제네릭 클래스, 타입 매개 변수 T
+	T val; // 변수 val 의 타입은 T
+
+	void set(T a) {
+		val = a; // T 타입의 값 a 를 val 에 지정
+	}
+
+	T get() {
+		return val; // T 타입의 값 val 리턴
+	}
+}
+
+public class MyClassEx {
+	public static void main(String[] args) {
+		// 문자열을 다루도록 구체화
+		MyClass<String> s = new MyClass<String>();
+
+		s.set("hello");
+		System.out.println(s.get());
+
+		// 정수값을 다루도록 구체화
+		MyClass<Integer> n = new MyClass<Integer>();
+
+		n.set(7);
+		System.out.println(n.get());
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+```java
+hello
+7
+```
+
+
+이처럼 제네릭 클래스를 사용하면 get() 메소드의 반환값을<br>
+명시적인 형 변환 없이 안전하게 사용할 수 있다.<br>
+
+
+-----------------------------------------------------------------------<br>
+
+
+지금까지 자바의 컬렉션과 제네릭에 대해 공부해 보았다.<br>
+다음 글에서는 자바의 GUI 스윙에 대해서 공부해 보겠다.<br>
+
+
+---
+※ 본 글은 개인 학습을 목적으로 「명품 자바 에센셜」(황기태 지음, 생능출판)을 참고하여 작성하였습니다.
